syntax = "proto3";

package challenge;

service ChallengeService {
  rpc getUserChallenges (ChallengeListRequest) returns (ChallengeListResponse) {}
  rpc getOpponentChallenges (ChallengeListRequest) returns (ChallengeListResponse) {}
  rpc getChallenges(ChallengeListRequest) returns (ChallengeListResponse) {}
}

message ChallengeListRequest {
  enum ChallengeStatus {
    pending = 0;
    accepted = 1;
    refused = 2;
  }
  int32 id = 1;
  repeated ChallengeStatus status = 2;
}

message ChallengeListResponse {
  repeated Challenge challenges = 1;
}

message Challenge {
  string id = 1;
  User user = 2;
  User opponent = 3;
  ChallengeStatus status = 4;
}

message User {
  int32 id = 1;
  string name = 2;
  repeated Pokemon pokemons = 3;
}

message Pokemon {
  int32 id = 1;
  string name = 2;
}
